REOPENED88056
[Refactoring] Frame::willDetachPage() shouldn't be called more than once.
https://bugs.webkit.org/show_bug.cgi?id=88056
Summary [Refactoring] Frame::willDetachPage() shouldn't be called more than once.
Hajime Morrita
Reported 2012-06-01 00:39:58 PDT
This is just a cleanup.
Attachments
Patch (4.83 KB, patch)
2012-06-01 01:22 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2012-06-01 01:22:39 PDT
Hajime Morrita
Comment 2 2012-06-01 01:24:03 PDT
Darin, Ryosuke, could you take a look? This is just a small cleanup.
Ryosuke Niwa
Comment 3 2012-06-01 01:44:33 PDT
Comment on attachment 145237 [details] Patch This is a scary change but looks reasonable. Hopefully it won't cause any regressions.
Ryosuke Niwa
Comment 4 2012-06-01 01:46:38 PDT
Comment on attachment 145237 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=145237&action=review > Source/WebCore/page/Frame.cpp:695 > if (Frame* parent = tree()->parent()) > parent->loader()->checkLoadComplete(); Actually, it's not entirely clear to me why we'd have to call checkLoadComplete more than once :\
WebKit Review Bot
Comment 5 2012-06-01 05:30:25 PDT
Comment on attachment 145237 [details] Patch Clearing flags on attachment: 145237 Committed r119219: <http://trac.webkit.org/changeset/119219>
WebKit Review Bot
Comment 6 2012-06-01 05:30:31 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 7 2012-06-01 06:47:56 PDT
Re-opened since this is blocked by 88088
Adam Barth
Comment 8 2012-06-01 08:54:14 PDT
Comment on attachment 145237 [details] Patch I seem to remember trying to do this originally, but there was something I found in studying the code that didn't work properly this way...
Hajime Morrita
Comment 9 2012-06-03 17:26:46 PDT
(In reply to comment #8) > (From update of attachment 145237 [details]) > I seem to remember trying to do this originally, but there was something I found in studying the code that didn't work properly this way... Hmm, interesting... I'd have liked to see the failed test. But this looks something which should keep untouched...
Note You need to log in before you can comment on or make changes to this bug.