Frame::willDetachPage() shouldn't be called more than once. https://bugs.webkit.org/show_bug.cgi?id=88056

Reviewed by Ryosuke Niwa.

This change moved willDetachPage() to private and calls it from
detachFromParent().  Also, it checks m_page and call
willDetachPage() only once, if m_page is available.

No new tests. Covered by existing suites.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::closeAndRemoveChild):
(WebCore::FrameLoader::detachFromParent):
* page/Frame.cpp:
(WebCore::Frame::detachFromPage):
(WebCore):
(WebCore::Frame::willDetachPage):
* page/Frame.h:
(Frame):
* page/Page.cpp:
(WebCore::Page::~Page):


Canonical link: https://commits.webkit.org/105898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119219 268f45cc-cd09-0410-ab3c-d52691b4dbfc