Source/WebCore/page/Page.cpp
@@ -187,10 +187,8 @@ Page::~Page()
     setGroupName(String());
     allPages->remove(this);
     
-    for (Frame* frame = mainFrame(); frame; frame = frame->tree()->traverseNext()) {
-        frame->willDetachPage();
+    for (Frame* frame = mainFrame(); frame; frame = frame->tree()->traverseNext())
         frame->detachFromPage();
-    }
 
     m_editorClient->pageDestroyed();
     if (m_alternativeTextClient)
